--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+:root {
+    --clr-text: hsl(0, 0%, 77%);
+    --clr-link-heading: hsl(46, 98%, 45%);
+    --clr-background: hsl(210, 16%, 31%);
+    --clr-borders: hsla(252, 10%, 80%, 0.15);
+    --clr-borders-nav: hsla(34, 78%, 91%, 0.85);
+}
+
 *,
 *::before,
 *::after {
@@ -19,7 +27,7 @@ html::-webkit-scrollbar {
 }
 
 body {
-    background-color: rgb(66, 79, 92);
+    background-color: var(--clr-background);
     background-image: url(https://images.unsplash.com/photo-1603346133929-24265debae88?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80);
     object-fit: fill;
     background-attachment: fixed;
@@ -43,7 +51,7 @@ li {
 /* ********* NAVBAR ********* */
 
 .navbar-brand {
-    color: hsla(34, 78%, 91%, 0.85);
+    color: var(--clr-borders-nav);
     margin: 0 1%;
     font-size: 1.5em;
     text-align: left;
@@ -61,15 +69,15 @@ li {
 }
 
 nav {
-    border-bottom: 2px solid #a7a1a1;
-    border-radius: 0 0 7px 7px;
+    border-bottom: 2px solid var(--clr-borders);
+    border-radius: 0 0 0.5rem 0.5rem;
     background-image: url(https://images.unsplash.com/photo-1664179550948-81c382b4fb31?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2127&q=80);
     background-size: cover;
 }
 
 .navlink {
     background: none;
-    color: rgb(207, 170, 5);
+    color: var(--clr-link-heading);
     padding: 0.25em;
     font-size: 1.25em;
     font-weight: 400;
@@ -79,7 +87,7 @@ nav {
 }
 
 .navlink:hover {
-    color: rgb(240, 232, 222);
+    color: hsl(33, 37%, 91%);
     transform: translateY(-0.25em);
     cursor: pointer;
 }
@@ -96,18 +104,19 @@ nav {
 }
 
 h1 {
-    color: rgb(207, 170, 5);
+    color: var(--clr-link-heading);
     text-shadow: 0.15rem 0.15rem 0.5rem #000000;
     margin: 0.5em auto;
 }
 
 h1:hover,
-h2:hover {
+h2:hover,
+h3:hover {
     cursor: default;
 }
 
 p {
-    color: rgb(197, 197, 197);
+    color: var(--clr-text);
     font-weight: 400;
     font-size: 1.15em;
     text-shadow: 0.15rem 0.15rem 0.5rem #000000;
@@ -117,7 +126,7 @@ p {
 .me {
     max-width: 350px;
     width: 100%;
-    border: 3px solid rgba(201, 199, 209, 0.15);
+    border: 3px solid hsla(252, 10%, 80%, 0.15);
     border-radius: 5% 15%;
     padding: 0;
     margin: 0;
@@ -133,25 +142,93 @@ p {
 
 .caroImg {
     width: 100%;
-    border: 3px solid rgba(201, 199, 209, 0.15);
+    border: 3px solid hsla(252, 10%, 80%, 0.15);
     padding: 0;
     margin: 0;
     filter: brightness(35%);
 }
 
 .slideLabel {
-    color: rgb(207, 170, 5);
+    color: hsl(49, 95%, 42%);
     text-shadow: 0.15rem 0.15rem 0.5rem #000000;
 }
 
 .slideText {
-    color: rgb(197, 197, 197);
+    color: hsl(0, 0%, 77%);
     text-shadow: 0.15rem 0.15rem 0.5rem #000000;
+}
+
+/* ********* CONTACTS ********* */
+
+.contact-heading {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#contact-form {
+    background-image: url(https://images.unsplash.com/photo-1603346133929-24265debae88?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80);
+    background-size: cover;
+    z-index: 9999;
+    display: none;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    max-width: 100vw;
+    min-width: 25vw;
+    background-color: var(--clr-background);
+    color: var(--clr-text);
+    text-align: center;
+    border: 0.125rem solid var(--clr-borders);
+    border-radius: 0.5rem;
+    margin: 1rem;
+    padding: 0 1rem 1rem 1rem;
+    transition: 0.25s ease-in-out;
+}
+
+#name,
+#email,
+#message {
+    width: 100%;
+    border-radius: 0.25rem;
+    margin-bottom: 0.5rem;
+    padding: 0.25rem 0.5rem;
+    background-color: var(--clr-borders);
+    color: var(--clr-link-heading);
+}
+
+#formSubmit {
+    width: 25%;
+    background: var(--clr-borders);
+    font-weight: 700;
+    color: var(--clr-link-heading);
+    border-color: var(--clr-link-heading);
+    border-radius: 0.25rem;
+}
+
+#formSubmit:hover,
+#formSubmit:focus {
+    color: var(--clr-borders-nav);
+    background-color: hsla(252, 10%, 80%, 0.025);
+    box-shadow: 0 0 5px var(--clr-link-heading);
+    transition: 0.1s ease-in;
+}
+
+input:-webkit-autofill {
+    color: var(--clr-borders) !important;
 }
 
 /* ********* MEDIA QUERIES ********* */
 
-@media screen and (min-width: 900px) {
+@media (min-width: 768px) {
+
+    #contact-form {
+        width: 50vw;
+    }
+
+}
+
+@media (min-width: 1200px) {
 
     p {
         font-size: 1.35em;
@@ -170,4 +247,7 @@ p {
         width: 85%;
     }
 
+    #contact-form {
+        width: 25vw;
+    }
 }
