--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ nav {
 }
 
 .navbar-brand:hover {
-    color: hsl(46, 100%, 50%);
+    color: var(--clr-link-heading);
     text-shadow: 0 0 5px hsla(46, 100%, 50%, 0.75);
 }
 
@@ -87,7 +87,7 @@ nav {
 }
 
 .navlink:hover {
-    color: hsl(33, 37%, 91%);
+    color: var(--clr-text);
     transform: translateY(-0.25em);
     cursor: pointer;
 }
@@ -97,7 +97,7 @@ nav {
 
 h1 {
     color: var(--clr-link-heading);
-    text-shadow: 0.15rem 0.15rem 0.5rem #000000;
+    text-shadow: 0.15rem 0.15rem 0.5rem black;
     margin: 0.5em auto;
 }
 
@@ -111,7 +111,7 @@ p {
     color: var(--clr-text);
     font-weight: 400;
     font-size: 1.15em;
-    text-shadow: 0.15rem 0.15rem 0.5rem #000000;
+    text-shadow: 0.15rem 0.15rem 0.5rem black;
     cursor: default;
 }
 
@@ -127,7 +127,7 @@ p {
 .me {
     max-width: 350px;
     width: 100%;
-    border: 3px solid hsla(252, 10%, 80%, 0.15);
+    border: 3px solid var(--clr-borders);
     border-radius: 5% 15%;
     padding: 0;
     margin: 0;
@@ -143,7 +143,7 @@ p {
 
 .caroImg {
     width: 100%;
-    border: 3px solid hsla(252, 10%, 80%, 0.15);
+    border: 3px solid var(--clr-borders);
     padding: 0;
     margin: 0;
     filter: brightness(35%);
@@ -151,12 +151,12 @@ p {
 
 .slideLabel {
     color: hsl(49, 95%, 42%);
-    text-shadow: 0.15rem 0.15rem 0.5rem #000000;
+    text-shadow: 0.15rem 0.15rem 0.5rem black;
 }
 
 .slideText {
-    color: hsl(0, 0%, 77%);
-    text-shadow: 0.15rem 0.15rem 0.5rem #000000;
+    color: var(--clr-text);
+    text-shadow: 0.15rem 0.15rem 0.5rem black;
 }
 
 /* ********* CONTACTS ********* */
@@ -166,6 +166,8 @@ input:-webkit-autofill {
 }
 
 .sent {
+    color: var(--clr-borders-nav);
+    font-size: 0.9rem;
     margin-top: 0.5rem;
 }
 
