--- a/Projects/Redesigns/vMix/style.css
+++ b/Projects/Redesigns/vMix/style.css
@@ -15,7 +15,7 @@ header {
 main {
     display: grid;
     place-content: center;
-    padding: 0 1%;
+
 }
 
 footer {
@@ -26,17 +26,17 @@ footer {
 }
 
 h1 {
-    font-size: 2rem;
+    font-size: clamp(1.75rem, 2vw, 2.75rem);
     text-align: center;
 }
 
 h2 {
-    font-size: 1.5rem;
+    font-size: clamp(1.25rem, 2vw, 2rem);
     text-align: center;
 }
 
 p {
-    font-size: 1rem;
+    font-size: clamp(1rem, 2vw, 1.25rem);
 }
 
 li {
@@ -45,14 +45,18 @@ li {
 }
 
 .main-image {
+    min-height: 100%;
     border-radius: 0.15rem;
+    object-fit: cover;
+    display: block;
+    align-self: center;
+    justify-self: center;
 }
 
 .container {
     min-width: 80vw;
-    border: 3px solid rgba(255, 255, 255, 0.25);
-    background-image: radial-gradient(73% 147%, #EADFDF 59%, #ECE2DF 100%), radial-gradient(91% 146%, rgba(255, 255, 255, 0.50) 47%, rgba(0, 0, 0, 0.50) 100%);
-    background-blend-mode: screen;
+    border: 3px solid rgba(255, 255, 255, 0.185);
+    background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
     box-shadow: 0.25rem 0.25rem 0.25rem hsla(0, 0%, 0%, 0.25);
 }
 
@@ -90,24 +94,13 @@ li {
     flex-direction: column;
     justify-content: center;
     gap: 1rem;
-    padding: 2rem;
+    padding: 1.5rem;
 }
 
 @media (min-width: 968px) {
 
     h1 {
-        font-size: 2.5rem;
-        text-align: center;
         padding: 1rem 2rem;
-    }
-
-    h2 {
-        font-size: 2rem;
-        text-align: center;
-    }
-
-    p {
-        font-size: 1.25rem;
     }
 
     .columns {
