--- a/Projects/Redesigns/vMix/style.css
+++ b/Projects/Redesigns/vMix/style.css
@@ -3,7 +3,7 @@ body {
     padding: 2rem;
     gap: 2rem;
     display: grid;
-    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
 }
 
 header {
@@ -54,6 +54,7 @@ li {
 }
 
 .container {
+    overflow: hidden;
     min-width: 80vw;
     border: 3px solid rgba(255, 255, 255, 0.185);
     background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
