--- a/CV/style.css
+++ b/CV/style.css
@@ -2,13 +2,14 @@ body {
     padding: 3rem;
     display: grid;
     place-content: center;
+    font-size: 19px;
 }
 
 main {
     display: grid;
     place-content: center;
     gap: 2rem;
-    max-width: 70rem;
+
 }
 
 ul,
