--- a/CV/style.css
+++ b/CV/style.css
@@ -2,7 +2,7 @@ body {
     padding: 3rem;
     display: grid;
     place-content: center;
-    font-size: 19px;
+    font-size: 17px;
 }
 
 main {
@@ -15,6 +15,7 @@ main {
 ul,
 li {
     list-style: none;
+    line-height: 2.25;
 }
 
 h2 {
@@ -27,8 +28,13 @@ h3 {
     font-size: 1.5rem;
 }
 
+.intro {
+    display: grid;
+    place-content: center;
+}
+
 .photo {
-    max-width: 12.5rem;
+    max-width: 17.5rem;
     border: 0.25rem solid hsla(0, 0%, 75%, 0.25);
     border-radius: 0.5rem;
     margin: 0 0.75rem;
@@ -60,4 +66,15 @@ h3 {
     min-width: 49.5%;
     border-radius: 0.125rem;
     box-shadow: 0.125rem 0.125rem 0.25rem hsl(0, 0%, 25%);
+}
+
+.socials {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+}
+
+.social-icon {
+    max-width: 3.5rem;
 }
