--- a/cv/style.css
+++ b/cv/style.css
@@ -1,5 +1,5 @@
 body {
-    padding: 1rem;
+    padding: 2rem 7.5rem;
     display: grid;
     place-content: center;
     font-size: 17px;
@@ -31,7 +31,6 @@ h3 {
 .intro {
     display: grid;
     place-content: center;
-    font-size: 16px;
 }
 
 .photo {
