--- a/cv/style.css
+++ b/cv/style.css
@@ -2,20 +2,20 @@ body {
     padding: 2rem 7.5rem;
     display: grid;
     place-content: center;
-    font-size: 17px;
+    font-size: 19px;
 }
 
 main {
     display: grid;
     place-content: center;
     gap: 2rem;
-
+    max-width: 95rem;
 }
 
 ul,
 li {
     list-style: none;
-    line-height: 2.25;
+    line-height: 2;
 }
 
 h2 {
